Running tests of `simulate_event` and learning `plotnine`

--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack\n",
-    "from jax.numpy import array, pi, exp, sin, mean, median, var\n",
-    "from pandas import read_csv\n",
+    "from jax.numpy import array, pi, exp, sin, mean, median, var, arange\n",
+    "from numpy import random\n",
+    "from pandas import read_csv, DataFrame, concat\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO[2021-12-21 11:31:45,946]: Unable to initialize backend 'tpu_driver': NOT_FOUND: Unable to find driver in registry given worker: \n",
+      "INFO[2021-12-21 11:31:45,948]: Unable to initialize backend 'gpu': NOT_FOUND: Could not find registered platform with name: \"cuda\". Available platform names are: Host Interpreter\n",
+      "INFO[2021-12-21 11:31:45,949]: Unable to initialize backend 'tpu': INVALID_ARGUMENT: TpuPlatform is not available.\n",
+      "WARNING[2021-12-21 11:31:45,950]: No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "model = get_model(\"Guttler14\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:18<00:00, 11.11it/s]\n"
+      "100%|██████████| 200/200 [00:17<00:00, 11.76it/s]\n"
      ]
     },
     {
@@ -151,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:45<00:00, 11.01it/s]\n"
+      "100%|██████████| 500/500 [00:45<00:00, 10.97it/s]\n"
      ]
     }
    ],
@@ -161,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +223,8 @@
     "    model.production = production   # Setting the production function \n",
     "    residuals = array([*data[\"d14c\"]]) - model.dc14()\n",
     "\n",
-    "    #* Should look into mae error reporting for the variance and mean\n",
+    "    #* Should look into mae error reporting for the variance and mean. \n",
+    "    #! Should be using mcmc here to get a better estimate for the mean and the variance ext.\n",
     "\n",
     "    gaussian_error_parameters = {   # Dictionary containing the parameters of a parametric gaussian\n",
     "        \"residuals\": {   # The statistical error in the residuals \n",
@@ -230,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,22 +259,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "event_params = params.copy()    # Copying the parameters dictionary \n",
-    "event_params[\"Duration (yr)\"][\"mean\"] = 1.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def simulate_event(model: ticktack.fitting.SingleFitter, error: dict, params: dict):\n",
-    "    core_data_stream = model.dc14()\n"
+    "    \"\"\"\n",
+    "    Simulates a Miyake event based on the things that have already transpired. \n",
+    "    \"\"\"\n",
+    "    #! I should make production take its parameters as an argument\n",
+    "    params = params         # Namespacing again \n",
+    "    def production(t):      # Namespacing again \n",
+    "        return production(t)\n",
+    "    \n",
+    "    model.production = production   # Production function with the new parameters\n",
+    "    core_data_stream = model.dc14() # Model generation\n",
+    "\n",
+    "    random_error = random.randn(len(core_data_stream)) * \\\n",
+    "        error[\"residuals\"][\"variance\"] + error[\"residuals\"][\"mean\"] # Generating the noise \n",
+    "    \n",
+    "    measurement_error = random.randn(len(core_data_stream)) * \\\n",
+    "        error[\"error\"][\"variance\"] + error[\"error\"][\"mean\"]\n",
+    "\n",
+    "    data = {    # A Dictionary that I will convert to a DataFrame and return \n",
+    "        \"Year\": model.time_data,                # The time series data \n",
+    "        \"DC14\": core_data_stream + random_error,# Simulated C14 data\n",
+    "        \"Sig_DC14\": measurement_error           # Simulated C14 measurement error\n",
+    "    }\n",
+    "\n",
+    "    return DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulations = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for duration in arange(0.0, 8.0):\n",
+    "    event_params = params.copy()                    # Copying the parameters dictionary \n",
+    "    event_params[\"Duration (yr)\"][\"mean\"] = duration# Changing the duration \n",
+    "\n",
+    "    simulations.append(simulate_event(model, gaussian_error, event_params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulations = concat(simulations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotnine import ggplot, geom_line, labs, aes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for test in simulations:\n",
+    "    (ggplot(test, aes(\"Year\", \"DC14\"))\n",
+    "        + geom_line()\n",
+    "    )"
    ]
   },
   {
