--- a/peak_hunting.ipynb
+++ b/peak_hunting.ipynb
@@ -331,6 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#! Data frame declaration outside of for loop scope\n",
     "for model in models:\n",
     "    model = get_model(model)\n",
     "    production_params = get_production_function(model, \"Miyake12.csv\")\n",
