--- a/webscraping_for_data.ipynb
+++ b/webscraping_for_data.ipynb
@@ -2,42 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import os"
+    "import os\n",
+    "import bs4 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = requests.get(\"https://github.com/SharmalLama/ticktack\")"
+    "test = requests.get(\"https://github.com/SharmaLlama/ticktack/tree/main/src/data/datasets\") \n",
+    "test = bs4.BeautifulSoup(test.text, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'h'"
+       "[<a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/5259BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">5259BCE/</span>NH</a>,\n",
+       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/5410BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">5410BCE/</span>NH</a>,\n",
+       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/660BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">660BCE/</span>NH</a>,\n",
+       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/7176BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">7176BCE/</span>NH</a>,\n",
+       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/775AD\" title=\"775AD\">775AD</a>,\n",
+       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/993AD\" title=\"993AD\">993AD</a>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = test.text\n",
-    "text[text.find(\"href\")]"
+    "test.find_all(\"a\", class_=\"js-navigation-open Link--primary\")\n"
    ]
   }
  ],
