Internal navigation complete

--- a/webscraping_for_data.ipynb
+++ b/webscraping_for_data.ipynb
@@ -13,37 +13,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = requests.get(\"https://github.com/SharmaLlama/ticktack/tree/main/src/data/datasets\") \n",
-    "test = bs4.BeautifulSoup(test.text, \"html.parser\")"
+    "http_request = requests.get(\"https://github.com/SharmaLlama/ticktack/tree/main/src/data/datasets\") \n",
+    "html_parser = bs4.BeautifulSoup(http_request.text, \"html.parser\")\n",
+    "github_repo = html_parser.find_all(\"a\", class_=\"js-navigation-open Link--primary\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/5259BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">5259BCE/</span>NH</a>,\n",
-       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/5410BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">5410BCE/</span>NH</a>,\n",
-       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/660BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">660BCE/</span>NH</a>,\n",
-       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/7176BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">7176BCE/</span>NH</a>,\n",
-       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/775AD\" title=\"775AD\">775AD</a>,\n",
-       " <a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/993AD\" title=\"993AD\">993AD</a>]"
+       "<a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/5259BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">5259BCE/</span>NH</a>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.find_all(\"a\", class_=\"js-navigation-open Link--primary\")\n"
+    "for  in test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/SharmaLlama/ticktack/tree/main/src/data/datasets/5259BCE/NH\n"
+     ]
+    }
+   ],
+   "source": [
+    "for js_string in str(test[0]).split('\"'):\n",
+    "    if js_string.startswith(\"/\"):\n",
+    "        print(js_string)"
    ]
   }
  ],
