Navigating the tree like a boss

--- a/webscraping_for_data.ipynb
+++ b/webscraping_for_data.ipynb
@@ -2,63 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import os\n",
-    "import bs4 "
+    "import bs4 \n",
+    "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's time to recursively solve this mf."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "http_request = requests.get(\"https://github.com/SharmaLlama/ticktack/tree/main/src/data/datasets\") \n",
     "html_parser = bs4.BeautifulSoup(http_request.text, \"html.parser\")\n",
-    "github_repo = html_parser.find_all(\"a\", class_=\"js-navigation-open Link--primary\")"
+    "github_repos = html_parser.find_all(\"a\", class_=\"js-navigation-open Link--primary\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<a class=\"js-navigation-open Link--primary\" data-pjax=\"#repo-content-pjax-container\" href=\"/SharmaLlama/ticktack/tree/main/src/data/datasets/5259BCE/NH\" title=\"This path skips through empty directories\"><span class=\"color-fg-muted\">5259BCE/</span>NH</a>"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for  in test "
+    "data_repos = []\n",
+    "for github_repo in github_repos:\n",
+    "    for js_string in str(github_repo).split('\"'):\n",
+    "        if js_string.startswith(\"/\"):\n",
+    "            data_repos.append(\"\".join([\"https://github.com\", js_string]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/SharmaLlama/ticktack/tree/main/src/data/datasets/5259BCE/NH\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for js_string in str(test[0]).split('\"'):\n",
-    "    if js_string.startswith(\"/\"):\n",
-    "        print(js_string)"
+    "data_set = requests.get(data_repos[0])\n",
+    "passed_data = bs4.BeautifulSoup(data_set.text, \"html.parser\")\n",
+    "passed_data.find_all(\"a\", class_=\"js-navigation-open Link--primary\")"
    ]
   }
  ],
