Miscellaneous and forgoten changes

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -5147,6 +5147,42 @@
     "draw(PDF(\"solver_profiles.pdf\", 20cm, 20cm), something); # Saving the figure \n",
     "CSV.write(\"solver_profiles.csv\", results);  # Writing the results to a CSV"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So basically I want to try and use Pycall (maybe), but I definitely want to loop over multiple models and multiple datasets.\n",
+    "```\n",
+    "parameters = load_params()  # Parameters of the model \n",
+    "solvers = []                # List of solvers \n",
+    "results = DataFrame()\n",
+    "\n",
+    "for model in models     # Path of the .hd5 files \n",
+    "    raw_solvers = profile_solvers()\n",
+    "    #! Repeat in the dataframe for long format \n",
+    "    for datum in data   # Path of the .csv files \n",
+    "        grads = profile_gradients()\n",
+    "        hessians = profile_hessians()\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I might make a function that loads the derivative from the `.hd5` file. This will be better since those are not used anywhere else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function load_model()"
+   ]
   }
  ],
  "metadata": {
