Getting to the .csv leaves of the tree

--- a/webscraping_for_data.ipynb
+++ b/webscraping_for_data.ipynb
@@ -13,21 +13,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It's time to recursively solve this mf."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_directories(passed_html):\n",
+    "    sub_directories = passed_html.find_all(\"a\", class_=\"js-navigation-open Link--primary\")\n",
+    "\n",
+    "    repositories = []\n",
+    "    for sub_directory in sub_directories:\n",
+    "        for js_string in str(sub_directory).split('\"'):\n",
+    "            if js_string.startswith(\"/\"):\n",
+    "                repositories.append(\"\".join([\"https://github.com\", js_string]))\n",
+    "\n",
+    "    return repositories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "http_request = requests.get(\"https://github.com/SharmaLlama/ticktack/tree/main/src/data/datasets\") \n",
-    "html_parser = bs4.BeautifulSoup(http_request.text, \"html.parser\")\n",
-    "github_repos = html_parser.find_all(\"a\", class_=\"js-navigation-open Link--primary\")"
+    "html_parser = bs4.BeautifulSoup(http_request.text, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_sets = []\n",
+    "for dir in get_directories(html_parser):\n",
+    "    data_set = requests.get(dir)\n",
+    "    passed_data = bs4.BeautifulSoup(data_set.text, \"html.parser\")\n",
+    "\n",
+    "    data_sets.append(get_directories(passed_data))"
    ]
   },
   {
@@ -36,22 +60,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_repos = []\n",
-    "for github_repo in github_repos:\n",
-    "    for js_string in str(github_repo).split('\"'):\n",
-    "        if js_string.startswith(\"/\"):\n",
-    "            data_repos.append(\"\".join([\"https://github.com\", js_string]))"
+    "for i, directory_data_sets in enumerate(data_sets):\n",
+    "    for data_set_url in directory_data_sets:\n",
+    "        if data_set_url.find(\"csv\") == -1:\n",
+    "            data_set = requests.get(data_set_url)\n",
+    "            passed_data = bs4.BeautifulSoup(data_set.text, \"html.parser\")\n",
+    "            data_sets[i] = get_directories(passed_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_set = requests.get(data_repos[0])\n",
-    "passed_data = bs4.BeautifulSoup(data_set.text, \"html.parser\")\n",
-    "passed_data.find_all(\"a\", class_=\"js-navigation-open Link--primary\")"
+    "for data_directory in data_sets:\n",
+    "    for data_url in data_directory:\n",
+    "        data_set = requests.get(data_url)\n",
+    "        data_set = bs4.BeautifulSoup(data_set.text, \"html.parser\")"
    ]
   }
  ],
