Seemingly complete web-scraper

--- a/webscraping_for_data.ipynb
+++ b/webscraping_for_data.ipynb
@@ -70,14 +70,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for data_directory in data_sets:\n",
-    "    for data_url in data_directory:\n",
+    "for data_urls in data_sets:\n",
+    "    for data_url in data_urls:\n",
     "        data_set = requests.get(data_url)\n",
-    "        data_set = bs4.BeautifulSoup(data_set.text, \"html.parser\")"
+    "        data_set = bs4.BeautifulSoup(data_set.text, \"html.parser\")\n",
+    "\n",
+    "        line_number_tags = data_set.find_all(\"td\", class_=\"blob-num js-line-number\")\n",
+    "        number_of_lines = int(line_number_tags[-1][\"id\"][1:]) - 1\n",
+    "\n",
+    "        data = {\n",
+    "            \"year\": [],\n",
+    "            \"d14c\": [],\n",
+    "            \"sig_d14c\": []\n",
+    "        }\n",
+    "        \n",
+    "        tabular_data = data_set.find_all(\"td\")[:-1]\n",
+    "        for line_number in range(number_of_lines * 4):\n",
+    "            column = line_number % 4\n",
+    "            if column == 1:\n",
+    "                pass\n",
+    "            elif column == 2:\n",
+    "                data[\"year\"].append(tabular_data[line_number]) \n",
+    "            elif column == 3:\n",
+    "                data[\"d14c\"].append(tabular_data[line_number])\n",
+    "            elif column == 0:\n",
+    "                data[\"sig_d14c\"].append(tabular_data[line_number])\n"
    ]
   }
  ],
