Working implementation of the webscraping program

--- a/webscraping_for_data.ipynb
+++ b/webscraping_for_data.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import bs4 "
+    "import bs4 \n",
+    "import pandas"
    ]
   },
   {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,44 +72,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = []   # List to store the python data sets\n",
+    "\n",
     "for data_urls in data_sets: # Loopig through the data sets in found by the program \n",
     "    for data_url in data_urls:  # Extracting the individual urls \n",
     "        data_set = requests.get(data_url)   # getting the http response for the data\n",
     "        data_set = bs4.BeautifulSoup(data_set.text, \"html.parser\")  # Passing the data html \n",
     "\n",
-    "        line_number_tags = data_set.find_all(\"td\", class_=\"blob-num js-line-number\")    # Finding the number of line in the html table that the data is displayed in \n",
-    "        number_of_lines = int(line_number_tags[-1][\"id\"][1:]) - 1   # Getting the total number of lines as python would see it using the range function \n",
-    "\n",
-    "        data = {    # Storing the data as a python dictionary \n",
+    "        datum = {    # Storing the data as a python dictionary \n",
     "            \"year\": [], # A column to store the year \n",
     "            \"d14c\": [], # A column to store the carbon 14 concentrations \n",
     "            \"sig_d14c\": []  # A columns to store the error in the carbon 14 concentrations \n",
     "        }\n",
     "        \n",
-    "        tabular_data = data_set.find_all(\"td\")[:-1] # retrieving the tabular data \n",
+    "        tabular_rows = data_set.find_all(\"tr\") # retrieving the tabular data \n",
+    "        columns_names = [\"year\", \"d14c\", \"sig_d14c\"]\n",
     "\n",
-    "        for line_number in range(number_of_lines * 4):  # Looping through each line of the table \n",
-    "            column = line_number % 4    # Finding the column of the present namespace \n",
-    "            if column == 1: # This represents the internal line markers \n",
-    "                pass\n",
-    "            elif column == 2:   # This represents the year of the row \n",
-    "                data[\"year\"].append(tabular_data[line_number]) \n",
-    "            elif column == 3:   # This represents the carbon content of the row \n",
-    "                data[\"d14c\"].append(tabular_data[line_number])\n",
-    "            elif column == 0:   # The represents the carbon error of the row \n",
-    "                data[\"sig_d14c\"].append(tabular_data[line_number])\n"
+    "        for tabular_row in tabular_rows:  # Looping through each line of the table \n",
+    "            column_counter = 0  # Keeping track of the current column in the data \n",
+    "            tabular_columns = tabular_row.find_all(\"td\")    # Finding all of the entries in the row\n",
+    "\n",
+    "            for tabular_column in tabular_columns:  # looping over the columns \n",
+    "                if tabular_column.has_attr(\"id\"):   # Checking if the searcher is in a data column \n",
+    "                    column_counter = 0  # Resetting the column indicating new row\n",
+    "                else:\n",
+    "                    tabular_entry = str(tabular_column).strip(\"<td>\").strip(\"</td>\")   # Retrieving data\n",
+    "                    datum[columns_names[column_counter]].append(tabular_entry)    # Adding the data to storage \n",
+    "                    column_counter += 1 # Moving along one column\n",
+    "                \n",
+    "        data.append(datum)\n",
+    "\n",
+    "        # pandas.DataFrame(datum).to_csv()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not all of the data sets, are lining up. I need to improve this with a conditional statement and then get the data stored."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'year': '-5246', 'd14c': '98.94', 'sig_d14c': '2.26'},\n",
+       " {'year': '-5247', 'd14c': '97.46', 'sig_d14c': '1.71'},\n",
+       " {'year': '-5247', 'd14c': '96.62', 'sig_d14c': '1.77'},\n",
+       " {'year': '-5251', 'd14c': '99.6', 'sig_d14c': '1.87'},\n",
+       " {'year': '-5396', 'd14c': '86.9', 'sig_d14c': '3.4'},\n",
+       " {'year': '-5400', 'd14c': '91.7', 'sig_d14c': '3'},\n",
+       " {'year': '-5381', 'd14c': '84.9', 'sig_d14c': '2.3'},\n",
+       " {'year': '-633', 'd14c': '-0.3', 'sig_d14c': '2.4'},\n",
+       " {'year': '-633', 'd14c': '2.4', 'sig_d14c': '2.3'},\n",
+       " {'year': '-7147', 'd14c': '82.91', 'sig_d14c': '2.95'},\n",
+       " {'year': '-7147', 'd14c': '83.17', 'sig_d14c': '1.92'},\n",
+       " {'year': '-7150', 'd14c': '84.33', 'sig_d14c': '2.47'},\n",
+       " {'year': '780', 'd14c': '-8.8', 'sig_d14c': '1.4'},\n",
+       " {'year': '780', 'd14c': '-12.9', 'sig_d14c': '1.6'},\n",
+       " {'year': '780', 'd14c': '-12.1', 'sig_d14c': '1.6'},\n",
+       " {'year': '780', 'd14c': '-11.6', 'sig_d14c': '2.3'},\n",
+       " {'year': '780', 'd14c': '-13.8', 'sig_d14c': '2.3'},\n",
+       " {'year': '780', 'd14c': '-12.4', 'sig_d14c': '2.3'},\n",
+       " {'year': '1000', 'd14c': '-15.19', 'sig_d14c': '2.40'},\n",
+       " {'year': '1000', 'd14c': '-13.64', 'sig_d14c': '2.36'}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
   }
  ],
  "metadata": {
